Disable and hide the quit/uninstall lulu menu

--- a/LuLu/App/App.entitlements
+++ b/LuLu/App/App.entitlements
@@ -9,8 +9,6 @@
 	<key>com.apple.developer.system-extension.install</key>
 	<true/>
 	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>$(TeamIdentifierPrefix)com.objective-see.lulu</string>
-	</array>
+	<array/>
 </dict>
 </plist>
