--- a/LuLu/Extension/Extension.entitlements
+++ b/LuLu/Extension/Extension.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>$(TeamIdentifierPrefix)com.objective-see.lulu</string>
+		<string>$(TeamIdentifierPrefix)com.bnodep.lulu</string>
 	</array>
 	<key>com.apple.security.temporary-exception.files.absolute-path.read-write</key>
 	<array>
